# tandemfoil2

./: .gitignore  BASELINE.md  CITATION.cff  README.md  ensemble_eval.py  eval_checkpoint.py  eval_ensemble.py  eval_test.py  launch_phase1.sh  loss_magnitude_diag.py  model.py  model_soup.py  models.py  program.md  pyproject.toml  run_r2_first.sh  run_remaining_seq.sh  run_sweep.sh  run_sweep_round1.sh  run_sweep_round3.sh  run_sweep_round4.sh  train.py
.assignments/: charliepai2c3-nezuko-fourier-pe-spatial-encoding.md
data/: SPLITS.md  __init__.py  generate_manifest.py  loader.py  prepare_splits.py  scoring.py  split_manifest.json  test_scoring.py
experiment_log/: full_details_2026-04-29_11-26.md  full_details_2026-04-29_14-51.md  full_details_2026-04-29_19-49.md  merged_2026-04-29_11-26.md  merged_2026-04-29_14-51.md  merged_2026-04-29_19-49.md  results_table_2026-04-29_11-26.md  results_table_2026-04-29_14-51.md  results_table_2026-04-29_19-49.md
instructions/: assignment-charliepai2c3-tanjiro-cosine-schedule-calibrated-to-timeout.md  prompt-advisor.md  prompt-student.md
launch_logs/: launcher.sh  monitor.sh
launchers/: ensemble_eval.py  find_best_checkpoints.py  median_ensemble.py  parse_runs.py  phase1.sh  phase2.sh  phase3.sh  status.py  status.sh  weighted_ensemble.py
logs/: more-heads-8.jsonl  more-slices-128-metrics.json
metrics/: charliepai2e1-alphonse-huber-delta1.0-gtc81aav.jsonl  charliepai2e1-alphonse-huber-surf20-n6axj9cr.jsonl  charliepai2e1-alphonse-huber-surf30-cy8mg2si.jsonl  charliepai2e1-alphonse-huber-surf50-5i468c21.jsonl  (+126 more)
(+1658 files in other folders)
