[project]
name = "tandemfoil2"
version = "0.1.0"
description = "Transolver surrogate trainer for TandemFoilSet (velocity + pressure fields)"
authors = [
    { name = "Morgan McGuire" },
    { name = "Thomas Capelle" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "einops",
    "timm",
    "simple-parsing",
    "tqdm",
    "rich",
    "pyyaml",
    "wandb",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["train"]

[tool.setuptools.packages.find]
include = ["data*"]
